fixed a long time bug with the tab spacing

--- a/public/stylesheets/widget/sass/screen.sass
+++ b/public/stylesheets/widget/sass/screen.sass
@@ -612,7 +612,7 @@ table.tablesorter
   padding-left: 2px
 
 .scrollbar_container
-  width: 850px * $scaleFactor
+  width: 425px
   height: 340px
   border: 4px solid #3198c1              /* har, comment out other border code*/
 
@@ -670,7 +670,7 @@ $tellmearea_fontsize: 14px
   li
     //height: 44px * $scaleFactor             /* if i ever had a compelling desire to change the tab height, this is where i'd change it*/
     display: inline
-    float: right
+    float: left
     border-top: 4px solid #3198c1 
     border-left: 4px solid #3198c1 
     border-right: 4px solid #3198c1 
@@ -688,7 +688,7 @@ $tellmearea_fontsize: 14px
       border-color: lighten(#3198c1, 30%)
 
 .vote-nav
-  width: 858px * $scaleFactor                   /* needs to be same width as scrollbar container*/
+  width: 434px                   /* needs to be same width as scrollbar container + its borders*/
   font-size: 24px * $scaleFactor
 
 .question
